# chat-with-jfk-files

./: .gitignore  Procfile  README.md  create_embeddings.ipynb  dockerfile  download.py  procfile  pyproject.toml  requirements.txt
src/chat_with_jfk_files/: chat.py  constants.py  llm.py  ocr.py  prompts.py
tests/: test_chat.py
webapp/: package-lock.json  package.json  tailwind.config.ts
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/components/: ChatInterface.tsx  Landing.tsx  SupportModal.tsx
